--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 
   <nav>
     <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
-      <li><a href="#">Link 4</a></li>
-      <li><a href="#">Link 5</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="flowers.html">Flowers</a></li>
+      <li><a href="colors.html">Colors</a></li>
+<!--       <li><a href="#">Link 4</a></li> -->
+      <li><a href="#">Contact</a></li>
     </ul>
   </nav>
 
-  <main></main>
+  <main>
+
+  </main>
 
 </body>
 </html>
