Promo section for homepage

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <body>
   <header>
     <h1>Floral Occasions</h1>
+    <p> bringing you the best bloom for your buck</p>
   </header>
 
   <nav>
     <ul>
-      <li><a href="#">About</a></li>
+      <li><a href="index.html">About</a></li>
       <li><a href="flowers.html">Flowers</a></li>
       <li><a href="colors.html">Colors</a></li>
 <!--       <li><a href="#">Link 4</a></li> -->
@@ -20,8 +21,13 @@
     </ul>
   </nav>
 
-  <main>
-
+  <main class="container">
+    <section class="promo">
+      <p>Have you ever wondered how to express sentimental feelings through the flowers you give? Think no further!</p>
+      <p class="tag">
+        Here at Floral Occasions, we help you select the right flowers for your loved (or not-so-loved) one by helping you select your bouquet from the traditional meanings of flowers and their equally meaningful colors.
+      </p>
+    </section>
   </main>
 
 </body>
