--- a/flowers.html
+++ b/flowers.html
@@ -12,10 +12,10 @@
 
   <nav>
     <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Flowers</a></li>
-<!--       <li><a href="#">Link 3</a></li>
-      <li><a href="#">Link 4</a></li> -->
+      <li><a href="index.html">About</a></li>
+      <li><a href="flowers.html">Flowers</a></li>
+      <li><a href="colors.html">Colors</a></li>
+<!--       <li><a href="#">Link 4</a></li> -->
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
