Updated to flower grid

--- a/flowers.html
+++ b/flowers.html
@@ -20,28 +20,28 @@
     </ul>
   </nav>
 
-  <main>
+  <main class="container">
     <!-- Flowers -->
     <ul id="flowers">
       <li class="fl">
         <img src="img/rose.jpg" alt="bouquet of roses">
-        <a href="#" target="_blank">Rose</a>
+        <span>Rose</span>
       </li>
       <li class="fl">
         <img src="img/tulip.jpg" alt="">
-        <a href="#" target="_blank">Tulip</a>
+        <span target="_blank">Tulip</span>
       </li>
       <li class="fl">
         <img src="img/daisy.jpg" alt="">
-        <a href="#" target="_blank">Daisy</a>
+        <span target="_blank">Daisy</span>
       </li>
       <li class="fl">
         <img src="img/sunflower.jpg" alt="">
-        <a href="#" target="_blank">Sunflower</a>
+        <span target="_blank">Sunflower</span>
       </li>
       <li class="fl">
         <img src="img/bbreath.jpg" alt="">
-        <a href="#" target="_blank">Baby's Breath</a>
+        <span target="_blank">Baby's Breath</span>
       </li>
     </ul>
   </main>
