Added banner image

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
     </ul>
   </nav>
 
-  <main class="container">
-    <section class="promo">
+  <div id="banner">
+    <div id="promo">
       <p>Have you ever wondered how to express sentimental feelings through the flowers you give? Think no further!</p>
       <p class="tag">
-        Here at Floral Occasions, we help you select the right flowers for your loved (or not-so-loved) one by helping you select your bouquet from the traditional meanings of flowers and their equally meaningful colors.
+        Here at Floral Occasions, you can choose the right flowers for your loved (or not-so-loved) one by selecting your bouquet from the traditional meanings of flowers and their equally meaningful colors.
       </p>
-    </section>
+    </div>
+  </div>
+
+  <main class="container">
+
+
   </main>
 
 </body>
