--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="css/main.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="js/script.js"></script>
+  
   <title>Floral Occasions</title>
 </head>
 <body>
@@ -16,7 +22,6 @@
       <li><a href="index.html">About</a></li>
       <li><a href="flowers.html">Flowers</a></li>
       <li><a href="colors.html">Colors</a></li>
-<!--       <li><a href="#">Link 4</a></li> -->
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -34,6 +39,18 @@
 
 
   </main>
+
+  <footer>
+    <div id="contact">
+      <span id="title">Contact Us</span>
+      <p id="address">1111 Engineering Drive<br/> 
+         Boulder, CO 80309
+      </p>
+    </div>
+    <div id="copyright">
+      <p>&copy; Floral Occasions, 2016</p>
+    </div>
+  </footer>
 
 </body>
 </html>
