--- a/flowers.html
+++ b/flowers.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="js/script.js"></script>
+
   <title>Floral Occasions</title>
 </head>
 <body>
@@ -15,7 +19,6 @@
       <li><a href="index.html">About</a></li>
       <li><a href="flowers.html">Flowers</a></li>
       <li><a href="colors.html">Colors</a></li>
-<!--       <li><a href="#">Link 4</a></li> -->
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -26,6 +29,10 @@
       <li class="fl">
         <img src="img/rose.jpg" alt="bouquet of roses">
         <span>Rose</span>
+        <p class="fl1 toggle">
+          <strong> Meaning: Love </strong><br>
+          The symbolism of a rose varies based on it's color, so be careful!
+        </p>
       </li>
       <li class="fl">
         <img src="img/tulip.jpg" alt="">
