Completed color page

--- a/colors.html
+++ b/colors.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="js/script.js"></script>
   
-  <title>Floral Occasions</title>
+  <title>Floral Occasions | Colors</title>
 </head>
 <body>
   <header>
@@ -33,35 +33,39 @@
     </div>
     <div class="color">
       <div class="palette orange"></div>
-      <p>Orange</p>
+      <p>The general consensus is that the bright tones of any orange flower indicate general enthusiasm and warmth, or even desire.</p>
     </div>
     <div class="color">
       <div class="palette yellow"></div>
-      <p>yellow</p>
+      <p>Yellow instantly brings a cheerful sunniness to any bouquet, and is often associated with joy, hope, and friendship.</p>
     </div>
     <div class="color">
       <div class="palette green"></div>
-      <p>green</p>
+      <p>While not entirely common among flowers, green is tied with life, vitality, and health. It is can also signify resilience or good luck.</p>
     </div>
     <div class="color">
       <div class="palette blue"></div>
-      <p>Blue</p>
+      <p>Paler blue hues have historically stood for peace, vulnerability, and trust.</p>
+    </div>
+    <div class="color">
+      <div class="palette dark-blue"></div>
+      <p>Unlike their paler counterparts, darker blues may be associated with anything from wisdom to unattainability.</p>
     </div>
     <div class="color">
       <div class="palette purple"></div>
-      <p>Purple</p>
+      <p>Purple has long been associated with royalty and thus conveys qualities such as dignity and success. Paler variations such as lavender are more closely tied with elegance and charm.</p>
     </div>
     <div class="color">
       <div class="palette black"></div>
-      <p>Black</p>
+      <p>Though rare and often expensive, black flowers tend to have more negative connotations such as death, hatred, or vengeance.</p>
     </div>
     <div class="color">
       <div class="palette brown"></div>
-      <p>Brown</p>
+      <p>The earthy tones in brown flowers often accompany celebrations of harvest and the earth in autumn.</p>
     </div>
     <div class="color">
       <div class="palette white"></div>
-      <p>White</p>
+      <p>White in any form has long represented purity, innocence, and humility. However, depending on the accompanying flower, it can also convey sympathy for bereavement.</p>
     </div>
 
   </main>
