--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Floral Occasions</title>
 </head>
 <body>
+  <div id="wrap">
   <header>
     <h1>Floral Occasions</h1>
     <p> bringing you the best bloom for your buck</p>
