Added intro section to color page

--- a/colors.html
+++ b/colors.html
@@ -27,9 +27,17 @@
   </nav>
 
   <main class="container">
+    <div id="intro">
+      When it comes to colors, the message you wish to send can take on totally different meanings depending on the colors of the flowers. For instance, while pink lilies may represent wealth and prosperity, white lilies are typically associated with condolences for death. (So don't go sending white lilies to your friend recovering from surgery in the hospital.)
+    </div>
+
     <div class="color">
       <div class="palette red"></div>
       <p>The vibrant nature of red flowers has traditionally led them to association with love and passion. However, its fiery hue can also convey characteristics such as courage or respect.</p>
+    </div>
+    <div class="color">
+      <div class="palette pink"></div>
+      <p>Pink flowers have often represented gentleness and grace, although in more recent years, they have taken on meanings such as thoughtfulness or spontaneity.</p>
     </div>
     <div class="color">
       <div class="palette orange"></div>
