Added more flowers woot

--- a/flowers.html
+++ b/flowers.html
@@ -33,8 +33,9 @@
           <p>While various colors express subtle differences, the rose has always stood for love and beauty.</p>
           <a href="#">add to bouquet</a>
         </div>
-        <span>Rose</span>
+        <span>rose</span>
       </li>
+
       <li class="fl" id="toggle2">
         <img src="img/tulip.jpg" alt="orange tulip">
         <div class="fl2">
@@ -42,35 +43,109 @@
           <p>Love -- whether unrequited (yellow) or passionate (red), the Turks planted them as a reminder of eternal life.</p>
           <a href="#">add to bouquet</a>
         </div>
-        <span>Tulip</span>
+        <span>tulip</span>
       </li>
+
       <li class="fl" id="toggle3">
-        <img src="img/daisy.jpg" alt="field of white daisies">
+        <img src="img/lavender.jpg" alt="field of lavender">
         <div class="fl3">
+          <strong>elegance</strong><br>
+          <p>Refinement, grace, or beauty, and a common symbol of healing.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>lavender</span>
+      </li>
+
+      <li class="fl" id="toggle4">
+        <img src="img/daisy.jpg" alt="field of white daisies">
+        <div class="fl4">
           <strong> innocence </strong><br>
           <p>New beginnings or sincerity, a reminder to see the world as a child.</p>
           <a href="#">add to bouquet</a>
         </div>
-        <span>Daisy</span>
+        <span>daisy</span>
       </li>
-      <li class="fl" id="toggle4">
+
+      <li class="fl" id="toggle5">
         <img src="img/sunflower.jpg" alt="single sunflower">
-        <div class="fl4 toggle">
+        <div class="fl5 toggle">
           <strong> joy </strong><br>
           <p>Good luck and enduring happiness, a long life.</p>
           <a href="#">add to bouquet</a>
         </div>
-        <span>Sunflower</span>
+        <span>sunflower</span>
       </li>
-      <li class="fl" id="toggle5">
-        <img src="img/bbreath.jpg" alt="">
-        <div class="fl5 toggle">
+
+      <li class="fl" id="toggle6">
+        <img src="img/bbreath.jpg" alt="baby's breath in field">
+        <div class="fl6 toggle">
           <strong> enduring love </strong><br>
           <p>Popular for new mothers or weddings, a symbol of fidelity.</p>
           <a href="#">add to bouquet</a>
         </div>
-        <span>Baby's Breath</span>
+        <span>baby's breath</span>
       </li>
+
+      <li class="fl" id="toggle7">
+        <img src="img/sakura.jpg" alt="sakura flowers on branch">
+        <div class="fl7 toggle">
+          <strong> mortality </strong><br>
+          <p>Famous as Japan's national flower, a reminder of spring and the brevity of life.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>sakura</span>
+      </li>
+
+      <li class="fl" id="toggle8">
+        <img src="img/lily.jpg" alt="orange lily">
+        <div class="fl8 toggle">
+          <strong> purity </strong><br>
+          <p>Often signifying renewal and the beauty of youth, it also has ties to European royalty or heartache.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>lily</span>
+      </li>
+
+      <li class="fl" id="toggle9">
+        <img src="img/gladiolus.jpg" alt="pink gladiolus">
+        <div class="fl9 toggle">
+          <strong> strength </strong><br>
+          <p>Long considered the flower of the gladiators, gladiolus also represent perseverance and faithfulness.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>gladiolus</span>
+      </li>
+
+      <li class="fl" id="toggle10">
+        <img src="img/forget.jpg" alt="forget me nots">
+        <div class="fl10 toggle">
+          <strong> remembrance </strong><br>
+          <p>While it can also be a symbol of loyal friendship, the remembrance can be tied with partings or deaths.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>forget me not</span>
+      </li>
+
+      <li class="fl" id="toggle11">
+        <img src="img/orchid.jpg" alt="orchids">
+        <div class="fl11 toggle">
+          <strong> dignity </strong><br>
+          <p>While each color has a unique meaning, orchids are often linked with individuality and admiration.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>orchid</span>
+      </li>
+
+      <li class="fl" id="toggle13">
+        <img src="img/freesia.jpg" alt="white freesia">
+        <div class="fl13 toggle">
+          <strong> trust </strong><br>
+          <p>These delicate blooms often stand for friendship and thoughtfulness, or purity when use d in weddings.</p>
+          <a href="#">add to bouquet</a>
+        </div>
+        <span>orchid</span>
+      </li>
+
     </ul>
   </main>
 
