--- a/index.html
+++ b/index.html
@@ -27,29 +27,35 @@
 
   <div id="banner">
     <div id="promo">
-      <p>Have you ever wondered how to express sentimental feelings through the flowers you give? Think no further!</p>
+      <p>Have you ever wondered how to express sentimental feelings through the flowers you give?<br/> Think no further!</p>
       <p class="tag">
         Here at Floral Occasions, you can choose the right flowers for your loved (or not-so-loved) one by selecting your bouquet from the traditional meanings of flowers and their equally meaningful colors.
       </p>
     </div>
+  
+    <main class="container">
+      <section>
+        <p class="general">Welcome to Floral Occasions -- we're so glad you're here! Whether you consider yourself a flower expert or are completely clueless about what you've just stumbled upon, we're here to help you choose the best. <br/>
+        Browse our endless selection of common and rare blooms, and remember to take a quick look at our <a href="colors.html" target="_blank">color</a> section for more details on how colors affect a bouquet.
+        </p>
+        <img src="img/bouquet.jpeg" alt="50% off on all pink flowers for Mother's day" class="ad"/>
+      </section>
+    </main>
+
+    <footer>
+      <div id="contact">
+        <span id="title">Contact Us</span>
+        <p id="address">1111 Engineering Drive<br/> 
+           Boulder, CO 80309
+        </p>
+      </div>
+      <div id="copyright">
+        <p>&copy; Floral Occasions, 2016</p>
+      </div>
+    </footer>
   </div>
 
-  <main class="container">
 
-
-  </main>
-
-  <footer>
-    <div id="contact">
-      <span id="title">Contact Us</span>
-      <p id="address">1111 Engineering Drive<br/> 
-         Boulder, CO 80309
-      </p>
-    </div>
-    <div id="copyright">
-      <p>&copy; Floral Occasions, 2016</p>
-    </div>
-  </footer>
 
 </body>
 </html>
