Actually got Susy to work right

--- a/flowers.html
+++ b/flowers.html
@@ -143,7 +143,7 @@
           <p>These delicate blooms often stand for friendship and thoughtfulness, or purity when use d in weddings.</p>
           <a href="#">add to bouquet</a>
         </div>
-        <span>orchid</span>
+        <span>freesia</span>
       </li>
 
     </ul>
